[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "qradar-sdk"
version = "26.0.0"
description = "Python SDK client for the IBM QRadar REST API v26.0"
readme = "README_SDK.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "requests>=2.28",
    "urllib3>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "responses",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qradar_sdk*"]
